refatoração de algumas partes do código. algumas ideias e funções parcialmente implementadas. alterada lista de metadados p/ hashtable.